Update code with improve in native image.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -71,4 +71,4 @@ springdoc:
     path: /openapi/swagger-ui.html
 ############## Application properties ###############
 restservice: 
-  msg: "This is a message from local environment"
+  msg: "LOCAL ENVIRONMENT"
